--- a/idex.html
+++ b/idex.html
@@ -1,14 +1,16 @@
-
+<main>
     <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNIVERSIDAD ESTATAL AMAZONICA</title>
-</head>
-<body>
-    <h1 style="color: rgb(226, 43, 150);">Iglesia Evangelica Apostolica del Nombre de Jesus</h1>
-    <h2 style="color: rosybrown;">Bienvenidos todos</h2>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>UNIVERSIDAD ESTATAL AMAZONICA</title>
+    </head>
+    <body>
+        <h1 style="color: rgb(226, 43, 150);">Iglesia Evangelica Apostolica del Nombre de Jesus</h1>
+        <h2 style="color: rosybrown;">Bienvenidos todos</h2>
+</main>
+
     <h5>Dios es nuestro amparo</h5>
     <p>en él hallamos paz, consuelo y esperanza, nos ayuda en tiempos difíciles no te olvides que existe un Dios admirable</p>
     <p>La biblia dice todo lo puedo en CRISTO que me fortalece, y no se equivoca. buscalo de corazon</p>
